# muppi_neurips

./: .gitattributes  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  VERSION  croissant.json  license.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  gitlab-sync.yml
config_files/: mono_vs_emf_base.yml  mono_vs_emf_base_cluster.yml  mono_vs_multi_base.yml  mono_vs_multi_base_cluster.yml  multi_vs_emf_base.yml  multi_vs_emf_base_cluster.yml  multi_vs_emf_oversampling.yml  multi_vs_emf_oversampling_local.yml  multi_vs_emf_subsampling.yml
doc/: benchmark.rst  dataset.rst
docker/: Dockerfile_ubuntu_18.04  Dockerfile_ubuntu_22.04
docs/: conf.py  dataset.rst  index.rst  introduction.rst  oversampling.rst  raw_data.rst  readme_link.rst  sub_sampling.rst
script/: Build_all_dataset.sh  run_summit.py  test_muppi_with_mucombo.ipynb
script/3UTR_Complexes_view/: Build_3UTR_Complexes_dataset.py
script/Cancer_Mutations_view/: Build_CancerMutations_dataset.sh  Cancer_Mutations_settings.py
script/Functions/: functions.py  oversampling.py  sub_sampling.py
script/GO_PPInetwork_view/: Build_GO-PPInetwork_dataset.sh  Build_Weighted_Embeddings.py  GO_PPInetwork_settings.py
script/Gene_Ontology_view/: Build_GeneOntology_datasets.sh  Gene_Ontology_settings.py
script/Labelling/: 3UTRcomplexes_labelling.py  EMF_labelling.py
script/Linear_Motifs_view/: Build_LinearMotifs_dataset.sh  Linear_Motifs_SLIMProb.py
script/PPInetwork_Embedding_view/: Build_PPInetEmbedding_dataset.py  Build_PPInetEmbedding_dataset.sh
(+27 files in other folders)
